# nami-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  demo-video-01-script.md  release-v0.0.1.md  release-v0.1.0.md  sensor-event-schema.md
examples/: hermes_runtime_pipeline.py  hermes_worker_guard.py
src/nami_harness/: __init__.py  brakes.py  exceptions.py  quality.py  rails.py  runtime.py  sensors.py
tests/: test_brakes.py  test_quality.py  test_rails.py  test_runtime.py  test_sensors.py
