[project]
name = "nami-harness"
version = "0.1.0"
description = "Harness engineering primitives for agentic systems: rails, brakes, sensors, and quality gates."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pao" }]
license = { text = "MIT" }
keywords = ["agentic", "harness", "rails", "brakes", "sensors", "quality"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
